Update footer copyright

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,7 +20,7 @@
 						</li>
 					{{- end }}
 				 </ul>
-				 <p class="copyright text-muted small">Copyright &copy; Beyond Performance LLC and {{ .Site.Title }} All Rights Reserved</p>
+				 <p class="copyright text-muted small">Copyright &copy; Beyond Performance LLC and {{ .Site.Title }}. All Rights Reserved</p>
 			</div>
             <div class="col-md-4" style="padding-right: 0px">
 			
